[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
dotenv = "0.15.0"
futures = "0.3.31"
redis = "0.32.5"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
scylla = "1.3.1"
tokio = {version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
yellowstone_gRPC = {path = "../yellowstone_gRPC"}
