[package]
edition = "2021"
name = "yellowstone_gRPC"
version = "0.1.0"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.99"
base64 = "0.22.0"
bs58 = "0.5.0"
chrono = {version="0.4.41", features = ["serde"]}
clickhouse = "0.13.3"
futures = "0.3.31"
redis = "0.32.5"
serde = "1.0.219"
serde_json = "1.0.143"
tokio = {version = "1.47.1", features = ["full"] }
tonic = {version = "0.14.1", features = ["tls-native-roots"]}
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
uuid = {version = "1.18.0", features = ["v4", "serde"]}
yellowstone-grpc-client = "9.0.0"
yellowstone-grpc-proto = "9.0.0"

